== Change Log

=== Edge
* Ease extension updates by proxying deprecated named routes. [Sean Cribbs]
* Add support and specs for conditional GETs with ETags. [Sean Cribbs]
* Initialize and update submodules when freezing edge. [John Muhl]
* Add Nginx support to ResponseCache. [Sean Cribbs]
* Changed (some) permissions examples not to use login_system_matcher. [Brandan Lennox]
* Remove expensive grep of Rails log in spec. [Rick DeNatale]
* Make markdown filter specs be tolerant of RDiscount. [Sean Cribbs]
* Be more explicit about vendor libraries, move Textile requirement into core. [Sean Cribbs]
* Add <r:children:each:if/unless_first/last> tags. [Rick DeNatale]
* Use RDiscount's smart quotes instead of SmartyPants. [John Muhl]
* Update extension generator to use new admin REST routing. [Jeroen Janssen]
* Update Admin::ResourceController to overcome respond_to weaknesses by
choosing HTML format by default. [Sean Cribbs]
* Add an IE-specific integration spec. [Jeroen Janssen]
* Update dataset, spec_integration, and vizres plugins. [Sean Cribbs]

=== 0.7.0-RC2
* Make specs and bootstrap work in instance mode. [Sean Cribbs]
* Override spec:integration task and rescope some spec task options to
RADIANT_ROOT. [Sean Cribbs]
* Improve rspec-1.1.12 compatibility. [Sean Cribbs]
* Add Ruby 1.8.7 compatibility patch. [Sean Cribbs]
* Fix upgrade issue from 0.5.x where class_name is expected to be present.
[Sean Cribbs]
* Remove unneeded patch. [Sean Cribbs]
* Add some inline documentation to resource controller. [Sean Cribbs]
* Fix some form problems on pages. [Sean Cribbs]
* Fix form on snippets/remove. [Sean Cribbs]
* Make sure resourceful responses deeply clone on inheritance. [Sean Cribbs]
* Fix broken Ajax children callback. [Sean Cribbs]
* Fix broken URL in snippets/remove. [Sean Cribbs]
* Correct assume_migrated_upto_version behavior in instance mode. [Sean Cribbs]
* Correct missing @@configuration variable in initializer. [John Muhl]